Footer style complete.

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         </div>
     </main>
     <footer>
-        <div class="footer country">
+        <div class="footer-country">
             <a href="">Brasil</a>
         </div>
-        <div class="footer addicional">
-            <div>
+        <div class="footer-adicional">
+            <div class="footer-adicional-esquerda">
                 <a href="">Publicidade</a>
                 <a href="">Negócios</a>
                 <a href="">Sobre</a>
                 <a href="">Como funciona a Pesquisa</a>
             </div>
-            <div>
+            <div class="footer-adicional-direita">
                 <a href="">Publicidade</a>
                 <a href="">Termos</a>
-                <a href="">Configurações</a>
+                <a href="" class="footer-adicional-direita-config">Configurações</a>
             </div>
         </div>
     </footer>
