--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 </head>
 <body>
     <header>
-        <div>
-            <p>Gmail</p>
-            <p>Images</p>
-            <p>Menu</p>
-            <p>Imagem-Pessoal</p>
+        <div class="menu">
+            <section class="menu-superior">
+                <p class="gmail">Gmail</p>
+                <p class="imagens">Images</p>
+                <a href=""><img src="img/menu.png" alt="Google Apps" title="Google Apps" class="menu-icone"></a>
+                <div class="user-img-box">
+                    <img src="img/standart.png" alt="Gustavo da Hora" class="user-img">
+                </div>
+            </section>
         </div>
     </header>
     <main>
