Adding underline in menu and links

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
         <div class="menu">
             <section class="menu-superior">
-                <p class="gmail">Gmail</p>
-                <p class="imagens">Images</p>
+                <a href=""><p class="gmail">Gmail</p></a>
+                <a href=""><p class="imagens">Images</p></a>
                 <a href=""><img src="img/menu.png" alt="Google Apps" title="Google Apps" class="menu-icone"></a>
                 <div class="user-img-box">
-                    <img src="img/standart.png" alt="Gustavo da Hora" class="user-img">
+                    <a href=""><img src="img/standart.png" alt="Gustavo da Hora" class="user-img"></a>
                 </div>
             </section>
         </div>
