Adding the correct search button.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,8 @@
             </div>
         </section>
         <div class="botoes">
-            <div class="botao-m">
-                <a href=""><p>Pesquisa Google</p></a>
-            </div>
-            <div class="botao-m">
-                <a href=""><p>Estou com sorte</p></a>
-            </div>
+            <button class="botao-m-p">Pesquisa Google</button>
+            <button class="botao-m-es">Estou com Sorte</button>
         </div>
     </main>
     <footer>
