Design search boxes and center buttons.

--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
         </div>
     </header>
     <main>
-        <div>
-            <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
-        </div>
-        <section>
-            <div>
-                <input type="text" alt="Pesquisar" title="Pesquisar">
+        <section class="box-logo">
+            <div class="google-logo">
+                <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
             </div>
         </section>
-        <div class="botoes">
-            <button class="botao-m-p">Pesquisa Google</button>
-            <button class="botao-m-es">Estou com Sorte</button>
-        </div>
+        <section class="box">
+            <div class="search-box">
+                <input type="text" alt="Pesquisar" title="Pesquisar" autofocus>
+            </div>
+            <div class="botoes">
+                <button class="botao-m-p">Pesquisa Google</button>
+                <button class="botao-m-es">Estou com Sorte</button>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-country">
