Detailing footer, Country exit the underline resource.

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     </main>
     <footer>
         <div class="footer-country">
-            <a href="">Brasil</a>
+            <h3 class="footer-text country">Brasil</h3>
         </div>
         <div class="footer-adicional">
             <div class="footer-adicional-esquerda">
-                <a href="">Publicidade</a>
-                <a href="">Negócios</a>
-                <a href="">Sobre</a>
-                <a href="">Como funciona a Pesquisa</a>
+                <a href="" class="footer-text">Publicidade</a>
+                <a href="" class="footer-text">Negócios</a>
+                <a href="" class="footer-text">Sobre</a>
+                <a href="" class="footer-text">Como funciona a Pesquisa</a>
             </div>
             <div class="footer-adicional-direita">
-                <a href="">Publicidade</a>
-                <a href="">Termos</a>
+                <a href="" class="footer-text">Publicidade</a>
+                <a href="" class="footer-text">Termos</a>
                 <a href="" class="footer-adicional-direita-config">Configurações</a>
             </div>
         </div>
