Adding the img file for the readme.md

--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
         </section>
         <section class="box">
             <div class="search-box">
-                <input type="text" alt="Pesquisar" title="Pesquisar" autofocus>
+                <div class="container">
+                    <div class="searchIcon">
+
+                    </div>
+                    <div class="input">
+                        <input maxlength="2048" name="q" type="text" autofocus="" spellcheck="false" title="Pesquisar" value="" aria-label="Pesquisar">
+                    </div>
+                    <div class="keyboardIcon">
+
+                    </div>
+                    <div class="voiceIcon">
+
+                    </div>
+                </div>
             </div>
             <div class="botoes">
                 <button class="botao-m-p">Pesquisa Google</button>
