Correcting all the flexbox and adding icon search.

--- a/index.html
+++ b/index.html
@@ -25,33 +25,36 @@
         </div>
     </header>
     <main>
-        <section class="box-logo">
-            <div class="google-logo">
-                <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
-            </div>
-        </section>
-        <section class="box">
-            <div class="search-box">
-                <div class="container">
-                    <div class="searchIcon">
-
-                    </div>
-                    <div class="input">
-                        <input maxlength="2048" name="q" type="text" autofocus="" spellcheck="false" title="Pesquisar" value="" aria-label="Pesquisar">
-                    </div>
-                    <div class="keyboardIcon">
-
-                    </div>
-                    <div class="voiceIcon">
-
-                    </div>
+        <div class="container">
+            <div class="container-logo">
+                <div class="google-logo">
+                    <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
                 </div>
             </div>
-            <div class="botoes">
-                <button class="botao-m-p">Pesquisa Google</button>
-                <button class="botao-m-es">Estou com Sorte</button>
+            <div class="search-box">
+                <div class="searchIcon">
+                    <img src="img/search-icon.png"></img>
+                </div>
+                <div class="input">
+                    <input maxlength="2048" name="q" type="text" autofocus="" spellcheck="false" title="Pesquisar" value="" aria-label="Pesquisar">
+                </div>
+                <!-- <div class="keyboardIcon">
+
+                </div>
+                <div class="voiceIcon">
+
+                </div> -->
             </div>
-        </section>
+            <div class="container-botoes">
+                <div class="botoes">
+                    <button class="botao-m-p">Pesquisa Google</button>
+                    <button class="botao-m-es">Estou com Sorte</button>
+                </div>
+            </div>
+                <div class="text-google">
+                    <p>Disponibilizado pelo Google em: <a href="https://www.google.com/setprefs?sig=0_NFaRuZJkf-ZmrokgeOL9oRJ9ovw%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwj7rrv7hfbpAhUKIrkGHaqxDcMQ2ZgBCA8">English</a></p>
+                </div>
+        </div>
     </main>
     <footer>
         <div class="footer-country">
