Adding flexbox to the top menu

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <div class="menu">
             <section class="menu-superior">
-                <a href=""><p class="gmail">Gmail</p></a>
-                <a href=""><p class="imagens">Images</p></a>
-                <a href=""><img src="img/menu.png" alt="Google Apps" title="Google Apps" class="menu-icone"></a>
+                <a href="" class="menu-link"><p class="gmail">Gmail</p></a>
+                <a href="" class="menu-link"><p class="imagens">Images</p></a>
+                <a href="" class="menu-link"><img src="img/menu.png" alt="Google Apps" title="Google Apps" class="menu-icone"></a>
                 <div class="user-img-box">
                     <a href=""><img src="img/standart.png" alt="Gustavo da Hora" class="user-img"></a>
                 </div>
